--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,5 +1,6 @@
 <h3>Admin</h3>
 
-Nimi: {{ session.username }}
+Nimi: {{ session.username }} <br>
 
-<a href="/logout">Kirjaudu ulos</a>
+<a href="/logout">Kirjaudu ulos</a><br>
+<a href="/admin/products">Tuotteet</a>
