--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
+{% extends "layout.html" %}
+{% block content %}
 <h1>Tervetuloa verkkokauppaan!</h1>
-{% if session.user_role == "customer" %}
-<p>Olet kirjautunut nimellä {{ session.username }}</p>
-<a href="/logout">Kirjaudu ulos</a>
-{% else %}
-<a href="/login">kirjaudu sisään</a>
-{% endif %}
-
 <h3>Tuotteet</h3>
 
 <ul>
     {% for product in products%}
-    <li>{{ product.name }} hinta: {{ product.price }}</li>
+    <li><a href="/product/{{ product.id }}"> {{ product.name }}</a> hinta: {{ product.price }}</li>
     {% endfor %}
 </ul>
+
+{% endblock %}
