--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,8 @@
 <title>Verkkokauppasovellus</title>
 <h3><a href="/">Verkkokauppasovellus</a></h3>
 {% if session.user_role == "customer" %}
-{{ session.username }}<br>
-Ostoskori: {{ session.cart_sum}} euroa
-<a href="/logout">Kirjaudu ulos</a>
+{{ session.username }} <a href="/logout"> Kirjaudu ulos</a><br>
+<a href="/user/{{ session.user_id }}">Ostoskori:</a> {{ session.cart_sum}} euroa
 {% else %}
 <a href="/login">Kirjaudu sisään</a><br>
 <a href="/register">Luo käyttäjätunnus</a>
