--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,17 +1,22 @@
 <title>Verkkokauppasovellus</title>
-<h3><a href="/">Verkkokauppasovellus</a></h3>
-{% if session.user_role == "customer" %}
-{{ session.username }} <a href="/logout"> Kirjaudu ulos</a><br>
-<a href="/user/{{ session.user_id }}">Ostoskori:</a> {{ session.cart_sum}} euroa
+<p>
+    <a href="/">Verkkokauppasovellus</a>
+    <span style="float: right;">
+        {% if session.user_role == "customer" %}
+        {{ session.username }} |
+        <a href="/user/{{ session.user_id }}">Ostoskori:</a> {{ session.cart_sum}} euroa |
+        <a href="/logout"> Kirjaudu ulos</a><br>
 
-{% elif session.user_role == "admin" %}
-Olet kirjautunut admin-tunnuksella: {{ session.username }}<br>
-<a href="/admin">Siirry adminiin</a><br>
-<a href="/logout"> Kirjaudu ulos</a><br>
+        {% elif session.user_role == "admin" %}
+        Olet kirjautunut admin-tunnuksella: {{ session.username }} |
+        <a href="/admin">Siirry adminiin</a> |
+        <a href="/logout"> Kirjaudu ulos</a>
 
-{% else %}
-<a href="/login">Kirjaudu sisään</a><br>
-<a href="/register">Luo käyttäjätunnus</a>
-{% endif %}
+        {% else %}
+        <a href="/login">Kirjaudu sisään</a> |
+        <a href="/register">Luo käyttäjätunnus</a>
+        {% endif %}
+    </span>
+</p>
 
 {% block content %}{% endblock %}
