--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -10,7 +10,7 @@
     <input type="number" name="price" step="0.01"><br>
     Kuvaus:<br>
     <textarea name="description" rows="3" cols="50"></textarea><br>
-    <input type="hidden" name="user_id" value="{{ session.user_id }}">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <input type="submit" value="Luo tuote">
 </form>
 
