--- a/templates/admin/product.html
+++ b/templates/admin/product.html
@@ -21,6 +21,7 @@ Valikoimassa: {{ product.active }}<br>
     <textarea name="description" rows="3" cols="50"></textarea><br>
     <label for="active">Näytä tuote valikoimassa</label>
     <input type="checkbox" name="active" checked><br>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <input type="submit" value="Päivitä tuote">
 </form>
 
