--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 <h1>Tervetuloa verkkokauppaan!</h1>
 <h3>Tuotteet</h3>
 
-<ul>
+<p>
     {% for product in products%}
-    <li><a href="/product/{{ product.id }}"> {{ product.name }}</a> hinta: {{ product.price }}</li>
+    <a href="/product/{{ product.id }}"> {{ product.name }}</a> hinta: {{ product.price }}<br>
     {% endfor %}
-</ul>
+</p>
 
 {% endblock %}
