--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -20,13 +20,11 @@
 
 <h3>Tuotteet</h3>
 
-<ul>
+<p>
     {% for product in products%}
-    <li>{{ product.name }}, {{ product.price }} euroa, valikoimassa: {{ product.active }},
-        luotu: {{ product.created_at}}, tekijä: {{ product.creator_id }}, muokattu viimeksi: {{ product.updated_at }}
-        <a href="/admin/product/{{ product.id }}">Muokkaa</a>
-    </li>
+    <a href="/admin/product/{{ product.id }}">{{ product.name }}</a>
+    {{ product.price }} euroa, valikoimassa: {{ product.active }}<br>
     {% endfor %}
-</ul>
+</p>
 
 {% endblock %}
