--- a/templates/product.html
+++ b/templates/product.html
@@ -3,8 +3,8 @@
 
 <h3>{{ product.name }}</h3>
 <p>
-    Hinta: {{ product.price }} euroa<br>
-    Kuvaus:<br>
+    <b>Hinta:</b> {{ product.price }} euroa<br>
+    <b>Kuvaus:</b><br>
     {{ product.description }}
 </p>
 
