--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -5,11 +5,11 @@
 
 <form action="/admin" method="POST">
     Nimi:<br>
-    <input type="text" name="name"><br>
+    <input type="text" name="name" minlength="1" maxlength="30" required><br>
     Hinta:<br>
-    <input type="number" name="price" step="0.01"><br>
+    <input type="number" name="price" step="0.01" min="0.01" max="1_000_000" required><br>
     Kuvaus:<br>
-    <textarea name="description" rows="3" cols="50"></textarea><br>
+    <textarea name="description" rows="3" cols="50" minlength="1" maxlength="500" required></textarea><br>
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <input type="submit" value="Luo tuote">
 </form>
