--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,10 @@
 <form action="/register" method="POST">
     Käyttäjätunnus:<br>
-    <input type="text" name="username"><br>
+    <input type="text" name="username" minlength="1" maxlength="20" required><br>
     Salasana:<br>
-    <input type="password" name="password1"><br>
+    <input type="password" name="password1" minlength="5" maxlength="50" required><br>
     Toista salasana:<br>
-    <input type="password" name="password2"><br>
+    <input type="password" name="password2" minlength="5" maxlength="50" required><br>
     <p>
         Voit luoda myös ylläpitäjän roolin, jolla pääsee palvelun backoffice-ympäristöön.<br>
         <input type="checkbox" name="create_admin">
