--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -1,3 +1,7 @@
+<!doctype html>
+<link rel="stylesheet" href="/static/main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Admin</title>
 <h3>Admin</h3>
 <p>
