--- a/static/main.css
+++ b/static/main.css
@@ -1,11 +1,21 @@
-* {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-}
-
-body {
+html {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.2;
     overflow-wrap: break-word;
+    margin: auto;
 }
 
 a {
     text-decoration-line: none;
+}
+
+textarea {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#delete_button {
+    color: red;
+    border-width: 0;
+    font-size: 16px;
+    background-color: white;
 }
